--- a/style/style_page_2.css
+++ b/style/style_page_2.css
@@ -91,7 +91,7 @@
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
     margin: 20px auto;
     margin-bottom: 50px;
-    width: 50%;
+    width: 40%;
 }
 
 .contact_form_container h3 {
@@ -123,6 +123,7 @@
     margin-bottom: 10px;
     border-radius: 15px;
     border: 1px solid #ccc;
+    font-size: 20px;
 }
 
 .contact_form input[type="button"] {
@@ -132,6 +133,7 @@
     background-color: #24affa;
     color: white;
     cursor: pointer;
+    font-size: 17px;
 }
 
 #menuOverlay {
